Map - fixed start and finish layering

--- a/bin/styles/less/include/map.less
+++ b/bin/styles/less/include/map.less
@@ -23,10 +23,14 @@
 
 			&.start::before {
 				content: 'START!';
+				position: absolute;
+				z-index: 65;
 			}
 
 			&.finish::before {
 				content: 'FINISH!';
+				position: absolute;
+				z-index: 65;
 			}
 
 			&.revealed {
