--- a/bin/styles/less/include/map.less
+++ b/bin/styles/less/include/map.less
@@ -56,6 +56,10 @@
 
 			.items {
 				position: absolute;
+			    top: 20px;
+				width: 13px;
+				height: 13px;
+				background: url('@{img-path}rooms/icons/items.png'); 
 				z-index: 60;
 			}
 
