--- a/bin/partials/directives/game-map.html
+++ b/bin/partials/directives/game-map.html
@@ -21,8 +21,8 @@
 			</div>
 			<div class="teamWalkingDirection" data-ng-show="tile.teamWalkingTo">MOVING HERE!</div>
 			<div class="enemies-panel">
-				<div ng-repeat="(enemyType, enemyCount) in getGroupedEnemies(tile.enemies)" class="enemy">
-					<span class="enemyCount">{{enemyCount}}</span><span class="enemyIcon {{enemyType}}"></span>
+				<div ng-repeat="enemy in tile.enemies" class="enemy" ng-style="{left: enemy.roomX, top: enemy.roomY}">
+					<span class="enemyIcon {{enemy.type.name}}"></span>
 				</div>
 			</div>
 		</div>
