Pixel art when zoomed in

--- a/bin/styles/less/include/reset.less
+++ b/bin/styles/less/include/reset.less
@@ -5,6 +5,7 @@ html, body, div, span, ul, li, a {
 }
 
 body {
+  image-rendering: pixelated;
 	font-family: monospace;
   // -webkit-backface-visibility: hidden;
   // -moz-backface-visibility: hidden;
