Auto-resize to fit screen, pixelated graphics and font

--- a/bin/styles/less/include/game-components.less
+++ b/bin/styles/less/include/game-components.less
@@ -128,7 +128,7 @@
 		    -webkit-transform: rotate(8deg);
 		    color: #F66;
 		    font-weight: 800;
-		    font-size: 18px;
+		    font-size: 100%;
 		    z-index: 60;
 		    -webkit-text-stroke: 1px red;
 		    text-stroke: 1px red;
