--- a/bin/styles/less/include/misc.less
+++ b/bin/styles/less/include/misc.less
@@ -5,3 +5,24 @@
 		clear: both;
 	}
 }
+
+@font-face {
+  font-family: 'basefont'; // Font "Apple ][" - http://www.lazilong.com/apple_II/a2font/a2font.html
+  src: url('@{img-path}font.ttf') format('truetype'); /* Legacy iOS */
+}
+
+body {
+  image-rendering: pixelated;
+  font-family: basefont;
+  font-size: 75%;
+  // -webkit-backface-visibility: hidden;
+  // -moz-backface-visibility: hidden;
+  // -ms-backface-visibility: hidden;
+  // backface-visibility: hidden;
+
+  // -webkit-perspective: 1000;
+  // -moz-perspective: 1000;
+  // -ms-perspective: 1000;
+  // perspective: 1000;
+}
+
