--- a/bin/styles/less/include/reset.less
+++ b/bin/styles/less/include/reset.less
@@ -4,26 +4,13 @@ html, body, div, span, ul, li, a {
 	padding: 0;
 }
 
-body {
-  image-rendering: pixelated;
-	font-family: monospace;
-  // -webkit-backface-visibility: hidden;
-  // -moz-backface-visibility: hidden;
-  // -ms-backface-visibility: hidden;
-  // backface-visibility: hidden;
-
-  // -webkit-perspective: 1000;
-  // -moz-perspective: 1000;
-  // -ms-perspective: 1000;
-  // perspective: 1000;
-}
-
 * {
   -webkit-touch-callout: none; 
   -webkit-text-size-adjust: none; 
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-user-select: none; 
   -webkit-user-drag: none;
+  cursor: default;
 }
 
 a, a:link, a:focus, a:visited {
