--- a/bin/partials/game.html
+++ b/bin/partials/game.html
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<div class="ammo-status">
-			<div class="ammo-slot" ng-repeat="(type, quantity) in model.ammo"><img class="ammo-icon" ng-src="img/items/ammo/{{::type}}.png" />{{quantity}}</div>
+			<div class="ammo-slot" ng-repeat="(type, quantity) in model.ammo"><img class="ammo-icon" ng-src="imgs/items/ammo/{{::type}}.png" />{{quantity}}</div>
 		</div>
 		<div class="action-panel">
 			<div class="action-progress" ng-show="model.currentAction.actionObject">
