--- a/bin/styles/less/include/misc.less
+++ b/bin/styles/less/include/misc.less
@@ -13,7 +13,7 @@
 
 body {
   image-rendering: pixelated;
-  font-family: basefont;
+  font-family: basefont, arial;
   font-size: 75%;
   // -webkit-backface-visibility: hidden;
   // -moz-backface-visibility: hidden;
