--- a/bin/partials/main-menu.html
+++ b/bin/partials/main-menu.html
@@ -1,5 +1,5 @@
 <div class="main-menu">
-	<div class="big-button-wrapper">
+	<div class="big-button-wrapper" ng-show="!selectingTutorial">
 		<div class="big-button" ng-click="selectingTutorial = true;">
 			New Game
 		</div>
