--- a/bin/partials/directives/character-panel.html
+++ b/bin/partials/directives/character-panel.html
@@ -7,8 +7,8 @@
 		<div class="health" ng-style="{height: 100 - (100 * character.health / character.maxHealth) + '%'}"></div>
 	</div>
 	<div class="items clearfix">
-		<item-slot slot="weapon" item="character.weapon" allowed-large="true" character="character" disabled="disableItems"></item-slot>
-		<item-slot slot="large" item="character.itemLarge" allowed-large="true" character="character" disabled="disableItems"></item-slot>
-		<item-slot slot="small" item="character.itemSmall" character="character" disabled="disableItems"></item-slot>
+		<item-slot slot-type="weapon" item-slot="character.weapon" allowed-large="true" character="character" disabled="disableItems"></item-slot>
+		<item-slot slot-type="large" item-slot="character.itemLarge" allowed-large="true" character="character" disabled="disableItems"></item-slot>
+		<item-slot slot-type="small" item-slot="character.itemSmall" character="character" disabled="disableItems"></item-slot>
 	</div>
 </div>
