--- a/bin/styles/less/include/misc.less
+++ b/bin/styles/less/include/misc.less
@@ -1,3 +1,24 @@
+@zIndex-item-charges: 50;
+@zIndex-item-text: 60;
+@zIndex-weapon-hit: 80;
+@zIndex-action-panel: 450;
+@zIndex-loot-window: 500;
+
+@zIndex-team-position: 300;
+@zIndex-direction-controls: 400;
+
+@zIndex-game-over: 9000;
+@zIndex-loading-overlay: 9100;
+@zIndex-tutorial-overlay: 10000;
+@zIndex-tutorial-highlight: 10010;
+@zIndex-tutorial-text: 10020;
+
+@zIndex-room-wall: 50;
+@zIndex-room-icon: 60;
+@zIndex-room-enemies: 75; // 75 - 165
+@zIndex-room-animation: 250;
+@zIndex-room-light: 200;
+
 .clearfix {
 	&:after {
 		content: "";
