--- a/bin/styles/less/include/map.less
+++ b/bin/styles/less/include/map.less
@@ -63,6 +63,16 @@
 				z-index: @zIndex-room-icon;
 			}
 
+			.icons {
+				position: absolute;
+			    bottom: 16px;
+				z-index: @zIndex-room-icon;
+
+				.icon {
+					float: left;
+				}
+			}
+
 			.animation {
 				@animation-size: @map-tile-size - 20;
 
