--- a/bin/partials/directives/game-map.html
+++ b/bin/partials/directives/game-map.html
@@ -15,15 +15,15 @@
 				<div class="door security-{{tile.S.security}}"></div>
 			</div>
 			<div class="room-type">{{tile.roomType}}</div>
-			<div class="items" ng-show="hasItems(tile)"></div>
-			<div class="icons">
+			<div class="items lineOfSight" ng-show="hasItems(tile)"></div>
+			<div class="icons lineOfSight">
 				<img ng-repeat="icon in tile.icons" class="icon" ng-src="imgs/rooms/icons/{{icon}}.png" />
 			</div>
-			<div class="animations-frame">
+			<div class="animations-frame lineOfSight">
 				<div ng-repeat="animation in tile.animations" class="animation" ng-class="animation"></div>
 			</div>
 			<div class="teamWalkingDirection" data-ng-show="tile.teamWalkingTo">MOVING HERE!</div>
-			<div class="enemies-panel">
+			<div class="enemies-panel lineOfSight">
 				<div ng-repeat="enemy in tile.enemies" class="enemy" ng-style="{left: enemy.roomX, top: enemy.roomY, 'z-index': 75 + enemy.roomY}">
 					<span class="enemyIcon {{enemy.type.name}}"></span>
 				</div>
