--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -7,7 +7,7 @@
 			<div class="charges" data-ng-show="itemSlot.item.model.charges">{{itemSlot.item.charges}}</div>
 			<div class="quantity" data-ng-show="itemSlot.item.quantity">{{itemSlot.item.quantity}}</div>
 			<div class="item-text reloading" ng-show="slotType === 'weapon' &amp;&amp; character.isReloading();">RELOAD</div>
-			<div class="item-text hold-fire" ng-show="slotType === 'weapon' &amp;&amp; character.holdFire &amp;&amp; !character.isReloading();">HOLD</div>
+			<div class="item-text hold-fire" ng-show="slotType === 'weapon' &amp;&amp; itemSlot.item.isWeapon() &amp;&amp; character.holdFire &amp;&amp; !character.isReloading();">HOLD</div>
 			<img class="item-image" ng-if="itemSlot.item" ng-src="imgs/items/{{itemSlot.item.model.category + '/' + itemSlot.item.model.image}}.png" />
 		</div>
 	</div>
